Add endpoint to create an author
